fix(bootstrap): use correct bs-collapse api

--- a/packages-adapters/bootstrap/src/components/accordion/accordion.scss
+++ b/packages-adapters/bootstrap/src/components/accordion/accordion.scss
@@ -1,6 +1,7 @@
 @import '../../utils';
 @import '~bootstrap/scss/accordion';
 
-bs-accordion {
+bs-accordion,
+bs-accordion-item {
   display: block;
 }
